--- a/src/components/todo-item/TodoItem.module.css
+++ b/src/components/todo-item/TodoItem.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-around;
     background-color: rgb(53, 53, 53);
+    border-radius: 6px;
 }
 
 .label {
