--- a/src/components/todo-category/TodoCategory.module.css
+++ b/src/components/todo-category/TodoCategory.module.css
@@ -4,10 +4,10 @@
 }
 
 .category {
+    gap: 0.8rem;
     width: 27rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     font-size: 18px;
     font-weight: 500;
-
 }
