--- a/src/components/todo-list/TodoList.module.css
+++ b/src/components/todo-list/TodoList.module.css
@@ -1,3 +1,12 @@
 .todoListWrapper {
     width: 100%;
 }
+
+.category {
+    gap: 0.8rem;
+    width: fit-content;
+    display: flex;
+    justify-content: start;
+    font-size: 18px;
+    font-weight: 500;
+}
